--- a/index.html
+++ b/index.html
@@ -9,10 +9,31 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <span>
-        <i class="lni lni-twitter-original"></i>
-    </span>
+    <div class="quote-container" id="quote-container">
+        <!-- Quote -->
+        <div class="quote-text">
+            <span>
+                <i class="lni lni-quotation"></i>
+            </span>
+            <span id="quote">Once you believe thst you are right, then you are .</span>
+        </div>
+        <!-- Author -->
+        <div class="quote-author">
+            <span id="author">Sebastian</span>
+        </div>
+        <!-- Buttons -->
+        <div class="button-container">
+            <button class="twitter-button" id="twitter" title="Tweet This !">
+                <span>
+                    <i class="lni lni-twitter-original"></i>
+                </span>
+            </button>
+            <button id="new-quote">New Quote</button>
+
+        </div>
+    </div>
 
     <script src="./script.js"></script>
 </body>
 </html>
+
