made style changes

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <span>
                 <i class="lni lni-quotation"></i>
             </span>
-            <span id="quote">Once you believe thst you are right, then you are .</span>
+            <span id="quote">Once you believe that you are right, then you are .</span>
         </div>
         <!-- Author -->
         <div class="quote-author">
