--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quote-Generstor</title>
+    <title>Quote-Generator</title>
     <link href="https://cdn.lineicons.com/3.0/lineicons.css" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
 </head>
@@ -29,7 +29,7 @@
                 </span>
             </button>
             <button id="new-quote">New Quote</button>
-
+            <a href="whatsapp://send?text='The text to share'!" data-action="share/whatsapp/share">Share via Whatsapp</a>
         </div>
     </div>
 
