--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </span>
             </button>
             <button id="new-quote">New Quote</button>
-            <a href="whatsapp://send?text='The text to share'!" data-action="share/whatsapp/share">Share via Whatsapp</a>
+            <!-- <a href="whatsapp://send?text='The text to share'!" data-action="share/whatsapp/share">Share via Whatsapp</a> -->
         </div>
     </div>
 
