--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
             <span>
                 <i class="lni lni-quotation"></i>
             </span>
-            <span id="quote">Once you believe that you are right, then you are .</span>
+            <span id="quote"></span>
         </div>
         <!-- Author -->
         <div class="quote-author">
-            <span id="author">Sebastian</span>
+            <span id="author"></span>
         </div>
         <!-- Buttons -->
         <div class="button-container">
@@ -32,6 +32,8 @@
             <!-- <a href="whatsapp://send?text='The text to share'!" data-action="share/whatsapp/share">Share via Whatsapp</a> -->
         </div>
     </div>
+    <!-- Loader -->
+    <div class="loader" id="loader"></div>
 
     <script src="./script.js"></script>
 </body>
