--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
     </div>
     <!-- Loader -->
     <div class="loader" id="loader"></div>
+    <p class="comment">Made with <span>❤</span> by Sebastian Anioke</p>
+    <script src="./script.js"></script>
 
     <script src="./script.js"></script>
 </body>
