--- a/index.html
+++ b/index.html
@@ -9,31 +9,33 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div class="quote-container" id="quote-container">
-        <!-- Quote -->
-        <div class="quote-text">
-            <span>
-                <i class="lni lni-quotation"></i>
-            </span>
-            <span id="quote"></span>
-        </div>
-        <!-- Author -->
-        <div class="quote-author">
-            <span id="author"></span>
-        </div>
-        <!-- Buttons -->
-        <div class="button-container">
-            <button class="twitter-button" id="twitter" title="Tweet This !">
+    <div class="body">
+        <div class="quote-container" id="quote-container">
+            <!-- Quote -->
+            <div class="quote-text">
                 <span>
-                    <i class="lni lni-twitter-original"></i>
+                    <i class="lni lni-quotation"></i>
                 </span>
-            </button>
-            <button id="new-quote">New Quote</button>
-            <!-- <a href="whatsapp://send?text='The text to share'!" data-action="share/whatsapp/share">Share via Whatsapp</a> -->
+                <span id="quote"></span>
+            </div>
+            <!-- Author -->
+            <div class="quote-author">
+                <span id="author"></span>
+            </div>
+            <!-- Buttons -->
+            <div class="button-container">
+                <button class="twitter-button" id="twitter" title="Tweet This !">
+                    <span>
+                        <i class="lni lni-twitter-original"></i>
+                    </span>
+                </button>
+                <button id="new-quote">New Quote</button>
+                <!-- <a href="whatsapp://send?text='The text to share'!" data-action="share/whatsapp/share">Share via Whatsapp</a> -->
+            </div>
         </div>
+        <!-- Loader -->
+        <div class="loader" id="loader"></div>
     </div>
-    <!-- Loader -->
-    <div class="loader" id="loader"></div>
     <p class="comment">Made with <span>❤</span> by Sebastian Anioke</p>
     <script src="./script.js"></script>
 </body>
